<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_about"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView style="@style/PkmTextMovieExtraTitle"
        android:id="@+id/tv_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_title"
        tools:text="about dialog title" />

    <TextView style="@style/PkmTextBody"
        android:id="@+id/tv_about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_header"
        android:textColor="@color/materialPrimaryDarkColor"/>

    <TextView style="@style/PkmTextBody"
        android:id="@+id/tv_about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_copyright"
        android:textColor="@color/materialPrimaryDarkColor"/>

    <TextView style="@style/PkmTextLabelInverse"
        android:id="@+id/tv_about_version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/dialog_about_version_info"
        android:textColor="@color/materialPrimaryDarkColor"/>

    <TextView style="@style/PkmTextLabelInverse"
        android:id="@+id/tv_about_build_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/dialog_about_build_date"
        android:textColor="@color/materialPrimaryDarkColor"/>

    <ImageView
        android:id="@+id/iv_movie_db_logo"
        android:contentDescription="@string/dialog_movie_db_logo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:scaleType="center"
        android:src="@mipmap/movie_db_408x161_powered_by_rectangle_black" />

</LinearLayout>