<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<!--
    References:
        https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout
            Rakshith Kumar and user2240225
        http://ivankocijan.xyz/android-nestedscrollview/
    History:
        20171117 Added runtime for Stage 2.
-->
<!-- COMPLETED 20171210 Try FrameLayout to RelativeLayout and move <fragment> inside of i
                        for debug. Did not work. -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="Overdraw">

    <TextView style="@style/PkmErrorMessage"
        android:id="@+id/tv_activity_movie_detail_error" />

    <ProgressBar style="@style/PkmProgressBar"
        android:id="@+id/pb_activity_movie_detail" />

    <include
        android:id="@+id/include_movie_detail_title"
        layout="@layout/include_movie_detail_title" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                 - This Guideline divides the screen into a left half and a right half and is used to    -
                 - anchor the views to the middle of the screen.                                         -
                 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

                <android.support.constraint.Guideline
                    android:id="@+id/gl_vertical_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <!-- Movie Title
                Note: android:layout_width="match_parent" to fill width of screen.
                      Put the title here again so that the image view is not cut off.
                      Any changes here should also be made to @layout/include_movie_detail_title.
                      Unable to reference the id/tv_movie_detail_title in an include layout.-->
                <TextView style="@style/PkmTextMovieDetailTitle"
                    android:id="@+id/tv_movie_detail_title_scrolled"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="movie title scrolled" />

                <!-- Movie Poster -->
                <ImageView
                    android:id="@+id/iv_movie_detail_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="185dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/a11y_MoviePoster"
                    app:layout_constraintRight_toLeftOf="@+id/gl_vertical_middle"
                    app:layout_constraintStart_toStartOf="@id/tv_movie_detail_title_scrolled"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title_scrolled"/>

                <!-- Release Year -->
                <TextView style="@style/PkmTextLabelInverse"
                    android:id="@+id/tv_movie_detail_year_label"
                    android:text="@string/movie_detail_release_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/tv_movie_detail_year"
                    app:layout_constraintLeft_toLeftOf="@+id/gl_vertical_middle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_movie_detail_year"
                    tools:text="year label"/>

                <TextView style="@style/PkmTextHeading2"
                    android:id="@+id/tv_movie_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:textAlignment="viewStart"
                    android:gravity="start"
                    android:visibility="visible"
                    app:layout_constraintLeft_toRightOf="@+id/tv_movie_detail_year_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title_scrolled"
                    tools:text="year" />

                <!-- Runtime -->
                <TextView style="@style/PkmTextLabelInverse"
                    android:id="@+id/tv_movie_detail_runtime_label"
                    android:text="@string/movie_detail_runtime_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/tv_movie_detail_runtime"
                    app:layout_constraintLeft_toLeftOf="@+id/gl_vertical_middle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_movie_detail_runtime"
                    tools:text="runtime label"/>

                <TextView style="@style/PkmTextHeading1"
                    android:id="@+id/tv_movie_detail_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_default"
                    android:textAlignment="viewStart"
                    android:gravity="start"
                    app:layout_constraintLeft_toRightOf="@+id/tv_movie_detail_runtime_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_year"
                    tools:text="runtime" />

                <!-- Vote Average -->
                <TextView style="@style/PkmTextLabelInverse"
                    android:id="@+id/tv_movie_detail_vote_average_label"
                    android:text="@string/movie_detail_vote_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/tv_movie_detail_vote_average_label"
                    app:layout_constraintLeft_toLeftOf="@+id/gl_vertical_middle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_movie_detail_vote_average"
                    tools:text="vote label"/>

                <TextView style="@style/PkmTextHeading2"
                    android:id="@+id/tv_movie_detail_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_default"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:visibility="visible"
                    app:layout_constraintLeft_toRightOf="@+id/tv_movie_detail_vote_average_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_runtime"
                    tools:layout_height="wrap_content"
                    tools:text="vote average" />

                <!-- Mark as Favorite -->
                <Button style="@style/PkmMovieFavoriteButton"
                    android:id="@+id/b_movie_detail_favorite"
                    app:layout_constraintLeft_toLeftOf="@+id/gl_vertical_middle"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_vote_average"
                    />

                <!-- Overview -->

                <TextView style="@style/PkmTextBodyInverse"
                    android:id="@+id/tv_movie_detail_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_movie_detail_poster"
                    tools:text="overview" />

                <!-- Movie Extras tab layout -->
                <android.support.design.widget.TabLayout
                    style="@style/PkmTabLayout"
                    android:id="@+id/tl_movie_detail_activity_extras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:nestedScrollingEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_overview">

                    <!-- Reviews tab -->
                    <android.support.design.widget.TabItem
                        style="@style/PkmTabItem"
                        android:id="@+id/ti_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/review_tab_text"
                        android:text="@string/review_tab_text">

                    </android.support.design.widget.TabItem>

                    <!-- Videos tab -->
                    <android.support.design.widget.TabItem
                        style="@style/PkmTabItem"
                        android:id="@+id/ti_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/video_tab_text"
                        android:textAlignment="center"
                        tools:text="@string/video_tab_text">

                    </android.support.design.widget.TabItem>
                </android.support.design.widget.TabLayout>

                <fragment
                    android:name="com.paulmender.udacity.popularmovies.MovieVideoListFragment"
                    class="com.paulmender.udacity.popularmovies.MovieVideoListFragment"
                    android:id="@+id/movie_video_list_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorTabItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/tl_movie_detail_activity_extras"
                    app:layout_constraintLeft_toLeftOf="@id/tl_movie_detail_activity_extras" />

                <fragment
                    android:id="@+id/movie_review_list_fragment"
                    class="com.paulmender.udacity.popularmovies.MovieReviewListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorTabItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/tl_movie_detail_activity_extras"
                    app:layout_constraintLeft_toLeftOf="@id/tl_movie_detail_activity_extras" />

            </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
